@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -bug#0001209: Content-type incorrect for the SVG graphs (Graph Management still does not display SVG, but rest does)
 -bug#0001279: php warning when installing specific plugins (if no "keys" were defined for a plugin table)
 -bug#0001306: Empty COMMENT + <HR> gives you a blank legend line (was: Add Blank Line to Graph via Pull down menu)
+-bug#0001311: Access denied for graph-only users when accessing index.php
 -bug#0001319: when adding a host using cli add_device that already exist in the database, both descriptions are updated
 -bug#0001335: <oid_index_parse> does not work as expected; requires changes to XML for e.g. EMC Cellera
 -bug#0001349: Graphs with Multiple Data Template Items don't show all required non-templated fields
